Add Home-2: recent-obituaries-section

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                 <!-- End Hero Section -->
 
                 <!-- Start Feature-section Section -->
-                <div class="feature-section section-padding">
+                <section class="feature-section section-padding">
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-xl-6">
@@ -521,7 +521,14 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                    <ul class="shape-parallax-list d-none d-lg-block">
+                        <li class="">
+                            <div data-depth="5.00">
+                                <img src="images/feature/feature-shape-1.svg" alt="shape" class="">
+                            </div>
+                        </li>
+                    </ul>
+                </section>
                 <!-- End Feature-section Section -->
 
                 <!-- Start Recent-Obituaries-section Section -->
@@ -759,7 +766,7 @@
                 </section>
                 <!-- End Recent-Obituaries-section Section -->
 
-                <div class="funeral-section section-padding">
+                <section class="funeral-section section-padding">
                     <div class="container">
                         <div class="row gutters-30 align-items-center">
                             <div class="col-md-12 col-lg-12 col-xl-6 wow animate__fadeInLeft animate__animated animate__animated" data-wow-duration="1200ms" data-wow-delay="300ms">
@@ -802,10 +809,22 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                    <ul class="shape-parallax-list d-none d-lg-block">
+                        <li class="">
+                            <div data-depth="5.00">
+                                <img src="images/funeral/funeral-shape-1.svg" alt="shape" class="">
+                            </div>
+                        </li>
+                        <li class="">
+                            <div data-depth="5.00">
+                                <img src="images/funeral/funeral-shape-2.svg" alt="shape" class="">
+                            </div>
+                        </li>
+                    </ul>
+                </section>
 
                 <!-- Start Obituaries-Location-section Section -->
-                <div class="obituaries-location-section section-padding">
+                <section class="obituaries-location-section section-padding">
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-xl-6">
@@ -988,10 +1007,21 @@
                                     </defs>
                                 </svg>
                             </a>
-
                         </div>
                     </div>
-                </div>
+                    <ul class="shape-parallax-list d-none d-lg-block">
+                        <li class="">
+                            <div data-depth="5.00">
+                                <img src="images/obituaries-location/obituary-location-shape-1.svg" alt="shape" class="">
+                            </div>
+                        </li>
+                        <li class="">
+                            <div data-depth="5.00">
+                                <img src="images/obituaries-location/obituary-location-shape-2.svg" alt="shape" class="">
+                            </div>
+                        </li>
+                    </ul>
+                </section>
                 <!-- End Obituaries-Location Section -->
 
                 <!-- Start Pay-Tribute section-->
