Start inner page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Start main wrapper -->
     <div id="main-wrapper" class="main-wrapper">
         <!-- Start main_content -->
-        <div id="main_content" class="home3-page">
+        <div id="main_content" class="home1-page">
             <main>
                 <!-- start header mobile menu -->
                 <div class="rt-header-menu">
@@ -210,8 +210,7 @@
                     <nav class="sticky-header">
                         <div class="container-lg">
                             <div class="row">
-                                <div id="header-content-wrap" class="header-content-wrap d-flex align-items-center justify-content-between navbar-wrap flex-wrap "
-                                    >
+                                <div id="header-content-wrap" class="header-content-wrap d-flex align-items-center justify-content-between navbar-wrap flex-wrap">
                                     <div class="header-logo">
                                         <a href="index.html">
                                             <img src="images/logo/logo-1.svg" alt="header-logo" width="191" height="52">
@@ -443,7 +442,7 @@
                                     <div class="icon d-inline-flex justify-content-center align-items-center circle-radius">
                                         <img src="images/feature/card-icon-1.svg" alt="">
                                     </div>
-                                    <h3 class="card-title">
+                                    <h3 class="title">
                                         <a href="">Easy to Access</a>
                                     </h3>
                                     <p class="card-info">
@@ -470,7 +469,7 @@
                                     <div class="icon d-inline-flex justify-content-center align-items-center circle-radius">
                                         <img src="images/feature/card-icon-2.svg" alt="">
                                     </div>
-                                    <h3 class="card-title">
+                                    <h3 class="title">
                                         <a href="">Strong Community</a>
                                     </h3>
                                     <p class="card-info">
@@ -497,7 +496,7 @@
                                     <div class="icon d-inline-flex justify-content-center align-items-center circle-radius">
                                         <img src="images/feature/card-icon-3.svg" alt="">
                                     </div>
-                                    <h3 class="card-title">
+                                    <h3 class="title">
                                         <a href="">Verified Listings</a>
                                     </h3>
                                     <p class="card-info">
@@ -575,7 +574,7 @@
                                             26/8/957 - 18/12/2022
                                         </span>
                                     </div>
-                                    <h3 class="card-title">
+                                    <h3 class="title">
                                         <a href="">Annette Black</a>
                                     </h3>
                                     <p class="card-info d-flex align-items-center justify-content-center">
@@ -598,7 +597,7 @@
                                             26/8/957 - 18/12/2022
                                         </span>
                                     </div>
-                                    <h3 class="card-title">
+                                    <h3 class="title">
                                         <a href="">Annette Black</a>
                                     </h3>
                                     <p class="card-info d-flex align-items-center justify-content-center">
@@ -621,7 +620,7 @@
                                             26/8/957 - 18/12/2022
                                         </span>
                                     </div>
-                                    <h3 class="card-title">
+                                    <h3 class="title">
                                         <a href="">Annette Black</a>
                                     </h3>
                                     <p class="card-info d-flex align-items-center justify-content-center">
@@ -644,7 +643,7 @@
                                             26/8/957 - 18/12/2022
                                         </span>
                                     </div>
-                                    <h3 class="card-title">
+                                    <h3 class="title">
                                         <a href="">Annette Black</a>
                                     </h3>
                                     <p class="card-info d-flex align-items-center justify-content-center">
@@ -667,7 +666,7 @@
                                             26/8/957 - 18/12/2022
                                         </span>
                                     </div>
-                                    <h3 class="card-title">
+                                    <h3 class="title">
                                         <a href="">Annette Black</a>
                                     </h3>
                                     <p class="card-info d-flex align-items-center justify-content-center">
@@ -690,7 +689,7 @@
                                             26/8/957 - 18/12/2022
                                         </span>
                                     </div>
-                                    <h3 class="card-title">
+                                    <h3 class="title">
                                         <a href="">Annette Black</a>
                                     </h3>
                                     <p class="card-info d-flex align-items-center justify-content-center">
@@ -713,7 +712,7 @@
                                             26/8/957 - 18/12/2022
                                         </span>
                                     </div>
-                                    <h3 class="card-title">
+                                    <h3 class="title">
                                         <a href="">Annette Black</a>
                                     </h3>
                                     <p class="card-info d-flex align-items-center justify-content-center">
@@ -736,7 +735,7 @@
                                             26/8/957 - 18/12/2022
                                         </span>
                                     </div>
-                                    <h3 class="card-title">
+                                    <h3 class="title">
                                         <a href="">Annette Black</a>
                                     </h3>
                                     <p class="card-info d-flex align-items-center justify-content-center">
@@ -1104,7 +1103,8 @@
                 </section>
                 <!-- End Pay-Tribute section-->
 
-                <div class="blog-section section-padding">
+                <!-- statr blog-section section-->
+                <section class="blog-section section-padding overflow-visible">
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-xl-6">
@@ -1139,7 +1139,7 @@
                                                 <span class="para-text">6 min read</span>
                                             </li>
                                         </ul>
-                                        <h3 class="card-title">
+                                        <h3 class="title">
                                             <a href="">Celebrate Life: The Obituary Chronicles</a>
                                         </h3>
                                         <p class="card-info">
@@ -1182,7 +1182,7 @@
                                                 <span class="para-text">6 min read</span>
                                             </li>
                                         </ul>
-                                        <h3 class="card-title">
+                                        <h3 class="title">
                                             <a href="">In Loving Memory: Stories of Those We Cheris</a>
                                         </h3>
                                         <p class="card-info">
@@ -1225,7 +1225,7 @@
                                                 <span class="para-text">6 min read</span>
                                             </li>
                                         </ul>
-                                        <h3 class="card-title">
+                                        <h3 class="title">
                                             <a href="">Honoring the Past: Obituari that Illuminate Lives</a>
                                         </h3>
                                         <p class="card-info">
@@ -1262,7 +1262,8 @@
                             </div>
                         </li>
                     </ul>
-                </div>
+                </section>
+                <!-- End blog-section section-->
 
                 <!-- Start App Download Section-->
                 <section class="app-download-section overflow-visible">
