--- a/blog-details.html
+++ b/blog-details.html
@@ -725,6 +725,7 @@
                                             </div>
                                         </form>
                                     </div>
+
                                 </article>
                             </div>
                             <div class="col-xl-4">
@@ -893,6 +894,114 @@
                         </div>
                     </div>
                 </section>
+
+                <!-- Statr blog-section section-->
+                <section class="blog-section  section-padding overflow-visible">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-xl-6">
+                                <div class="title-wrapper text-center">
+                                    <h2 class="section-title wow animate__fadeInUp animate__animated animate__animated" data-wow-duration="1200ms" data-wow-delay="300ms">
+                                        Related News
+                                    </h2>
+                                    <p class="subtitle wow animate__fadeInUp animate__animated animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                        Exploring obituaries by location typically involves using online platforms that specialize in publishing obituaries notices.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 col-lg-6 col-xl-4 wow animate__fadeInUp animate__animated animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
+                                <div class="rt-card rt-card--style-3 mb-4 mb-lg-0">
+                                    <div class="image-item">
+                                        <img src="images/blog/blog-img-1.jpg" alt="">
+                                    </div>
+                                    <div class="content">
+                                        <ul class="meta-data d-flex align-items-center gap-4">
+                                            <li class="meta-item d-flex justify-content-center align-items-center">
+                                                <i class="icon-calendar"></i>
+                                                <span class="para-text">26 aug,2022</span>
+                                            </li>
+                                            <li class="meta-item d-flex justify-content-center align-items-center">
+                                                <i class="icon-clock"></i>
+                                                <span class="para-text">6 min read</span>
+                                            </li>
+                                        </ul>
+                                        <h3 class="title">
+                                            <a href="">Celebrate Life: The Obituary Chronicles</a>
+                                        </h3>
+                                        <p class="card-info">
+                                            Lorem ipsum dolor sit amet consectetur. Ipsum lectus diam vulputate...
+                                        </p>
+                                        <a href="" class="card-btn button button-transparent btn-animation d-inline-flex align-items-center">
+                                            Read More
+                                            <i class="icon-arrow"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-6 col-xl-4 wow animate__fadeInUp animate__animated animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
+                                <div class="rt-card rt-card--style-3 mb-4 mb-lg-0">
+                                    <div class="image-item">
+                                        <img src="images/blog/blog-img-4.jpg" alt="">
+                                    </div>
+                                    <div class="content">
+                                        <ul class="meta-data d-flex align-items-center gap-4">
+                                            <li class="meta-item d-flex justify-content-center align-items-center">
+                                                <i class="icon-calendar"></i>
+                                                <span class="para-text">26 aug,2022</span>
+                                            </li>
+                                            <li class="meta-item d-flex justify-content-center align-items-center">
+                                                <i class="icon-clock"></i>
+                                                <span class="para-text">6 min read</span>
+                                            </li>
+                                        </ul>
+                                        <h3 class="title">
+                                            <a href="">In Loving Memory: Stories of Those We Cheris</a>
+                                        </h3>
+                                        <p class="card-info">
+                                            Lorem ipsum dolor sit amet consectetur. Ipsum lectus diam vulputate...
+                                        </p>
+                                        <a href="" class="card-btn button button-transparent btn-animation d-inline-flex align-items-center">
+                                            Read More
+                                            <i class="icon-arrow"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-6 col-xl-4 wow animate__fadeInUp animate__animated animate__animated" data-wow-duration="1200ms" data-wow-delay="700ms">
+                                <div class="rt-card rt-card--style-3 mb-4 mb-lg-0">
+                                    <div class="image-item">
+                                        <img src="images/blog/blog-img-3.jpg" alt="">
+                                    </div>
+                                    <div class="content">
+                                        <ul class="meta-data d-flex align-items-center gap-4">
+                                            <li class="meta-item d-flex justify-content-center align-items-center">
+                                                <i class="icon-calendar"></i>
+                                                <span class="para-text">26 aug,2022</span>
+                                            </li>
+                                            <li class="meta-item d-flex justify-content-center align-items-center">
+                                                <i class="icon-clock"></i>
+                                                <span class="para-text">6 min read</span>
+                                            </li>
+                                        </ul>
+                                        <h3 class="title">
+                                            <a href="">Honoring the Past: Obituari that Illuminate Lives</a>
+                                        </h3>
+                                        <p class="card-info">
+                                            Lorem ipsum dolor sit amet consectetur. Ipsum lectus diam vulputate...
+                                        </p>
+                                        <a href="" class="card-btn button button-transparent btn-animation d-inline-flex align-items-center">
+                                            Read More
+                                            <i class="icon-arrow"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- End blog-section section-->
 
 
                 <!-- start footer section -->
