--- a/assets/fontello-icon-webfont/demo.html
+++ b/assets/fontello-icon-webfont/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'rt-obituary';
-      src: url('./font/rt-obituary.eot?58115617');
-      src: url('./font/rt-obituary.eot?58115617#iefix') format('embedded-opentype'),
-           url('./font/rt-obituary.woff?58115617') format('woff'),
-           url('./font/rt-obituary.ttf?58115617') format('truetype'),
-           url('./font/rt-obituary.svg?58115617#rt-obituary') format('svg');
+      src: url('./font/rt-obituary.eot?3614649');
+      src: url('./font/rt-obituary.eot?3614649#iefix') format('embedded-opentype'),
+           url('./font/rt-obituary.woff?3614649') format('woff'),
+           url('./font/rt-obituary.ttf?3614649') format('truetype'),
+           url('./font/rt-obituary.svg?3614649#rt-obituary') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -309,6 +309,15 @@
         </div>
       </div>
       <div class="row">
+        <div class="span3" title="Code: 0xe823">
+          <i class="demo-icon icon-image">&#xe823;</i> <span class="i-name">icon-image</span><span class="i-code">0xe823</span>
+        </div>
+        <div class="span3" title="Code: 0xe824">
+          <i class="demo-icon icon-video">&#xe824;</i> <span class="i-name">icon-video</span><span class="i-code">0xe824</span>
+        </div>
+        <div class="span3" title="Code: 0xe826">
+          <i class="demo-icon icon-share">&#xe826;</i> <span class="i-name">icon-share</span><span class="i-code">0xe826</span>
+        </div>
         <div class="span3" title="Code: 0xf315">
           <i class="demo-icon icon-youtube">&#xf315;</i> <span class="i-name">icon-youtube</span><span class="i-code">0xf315</span>
         </div>
