--- a/assets/fontello-icon-webfont/demo.html
+++ b/assets/fontello-icon-webfont/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'rt-obituary';
-      src: url('./font/rt-obituary.eot?3614649');
-      src: url('./font/rt-obituary.eot?3614649#iefix') format('embedded-opentype'),
-           url('./font/rt-obituary.woff?3614649') format('woff'),
-           url('./font/rt-obituary.ttf?3614649') format('truetype'),
-           url('./font/rt-obituary.svg?3614649#rt-obituary') format('svg');
+      src: url('./font/rt-obituary.eot?22322312');
+      src: url('./font/rt-obituary.eot?22322312#iefix') format('embedded-opentype'),
+           url('./font/rt-obituary.woff?22322312') format('woff'),
+           url('./font/rt-obituary.ttf?22322312') format('truetype'),
+           url('./font/rt-obituary.svg?22322312#rt-obituary') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -317,6 +317,14 @@
         </div>
         <div class="span3" title="Code: 0xe826">
           <i class="demo-icon icon-share">&#xe826;</i> <span class="i-name">icon-share</span><span class="i-code">0xe826</span>
+        </div>
+        <div class="span3" title="Code: 0xe827">
+          <i class="demo-icon icon-icon-location-2">&#xe827;</i> <span class="i-name">icon-icon-location-2</span><span class="i-code">0xe827</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe828">
+          <i class="demo-icon icon-location-3">&#xe828;</i> <span class="i-name">icon-location-3</span><span class="i-code">0xe828</span>
         </div>
         <div class="span3" title="Code: 0xf315">
           <i class="demo-icon icon-youtube">&#xf315;</i> <span class="i-name">icon-youtube</span><span class="i-code">0xf315</span>
