--- a/index-2.html
+++ b/index-2.html
@@ -847,10 +847,7 @@
                                             <a href="">Annette Black</a>
                                         </h3>
                                         <p class="card-info d-flex align-items-center justify-content-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" viewBox="0 0 17 16" fill="none">
-                                                <path d="M14.5 6.66675C14.5 11.3334 8.5 15.3334 8.5 15.3334C8.5 15.3334 2.5 11.3334 2.5 6.66675C2.5 5.07545 3.13214 3.54933 4.25736 2.42411C5.38258 1.29889 6.9087 0.666748 8.5 0.666748C10.0913 0.666748 11.6174 1.29889 12.7426 2.42411C13.8679 3.54933 14.5 5.07545 14.5 6.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                                <path d="M8.5 8.66675C9.60457 8.66675 10.5 7.77132 10.5 6.66675C10.5 5.56218 9.60457 4.66675 8.5 4.66675C7.39543 4.66675 6.5 5.56218 6.5 6.66675C6.5 7.77132 7.39543 8.66675 8.5 8.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                            </svg>
+                                            <i class="icon-location"></i>
                                             Memphis, Tennessee
                                         </p>
                                         <div class="date-shape">
@@ -877,10 +874,7 @@
                                             <a href="">Annette Black</a>
                                         </h3>
                                         <p class="card-info d-flex align-items-center justify-content-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" viewBox="0 0 17 16" fill="none">
-                                                <path d="M14.5 6.66675C14.5 11.3334 8.5 15.3334 8.5 15.3334C8.5 15.3334 2.5 11.3334 2.5 6.66675C2.5 5.07545 3.13214 3.54933 4.25736 2.42411C5.38258 1.29889 6.9087 0.666748 8.5 0.666748C10.0913 0.666748 11.6174 1.29889 12.7426 2.42411C13.8679 3.54933 14.5 5.07545 14.5 6.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                                <path d="M8.5 8.66675C9.60457 8.66675 10.5 7.77132 10.5 6.66675C10.5 5.56218 9.60457 4.66675 8.5 4.66675C7.39543 4.66675 6.5 5.56218 6.5 6.66675C6.5 7.77132 7.39543 8.66675 8.5 8.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                            </svg>
+                                            <i class="icon-location"></i>
                                             Memphis, Tennessee
                                         </p>
                                         <div class="date-shape">
@@ -907,10 +901,7 @@
                                             <a href="">Annette Black</a>
                                         </h3>
                                         <p class="card-info d-flex align-items-center justify-content-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" viewBox="0 0 17 16" fill="none">
-                                                <path d="M14.5 6.66675C14.5 11.3334 8.5 15.3334 8.5 15.3334C8.5 15.3334 2.5 11.3334 2.5 6.66675C2.5 5.07545 3.13214 3.54933 4.25736 2.42411C5.38258 1.29889 6.9087 0.666748 8.5 0.666748C10.0913 0.666748 11.6174 1.29889 12.7426 2.42411C13.8679 3.54933 14.5 5.07545 14.5 6.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                                <path d="M8.5 8.66675C9.60457 8.66675 10.5 7.77132 10.5 6.66675C10.5 5.56218 9.60457 4.66675 8.5 4.66675C7.39543 4.66675 6.5 5.56218 6.5 6.66675C6.5 7.77132 7.39543 8.66675 8.5 8.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                            </svg>
+                                            <i class="icon-location"></i>
                                             Memphis, Tennessee
                                         </p>
                                         <div class="date-shape">
@@ -937,10 +928,7 @@
                                             <a href="">Annette Black</a>
                                         </h3>
                                         <p class="card-info d-flex align-items-center justify-content-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" viewBox="0 0 17 16" fill="none">
-                                                <path d="M14.5 6.66675C14.5 11.3334 8.5 15.3334 8.5 15.3334C8.5 15.3334 2.5 11.3334 2.5 6.66675C2.5 5.07545 3.13214 3.54933 4.25736 2.42411C5.38258 1.29889 6.9087 0.666748 8.5 0.666748C10.0913 0.666748 11.6174 1.29889 12.7426 2.42411C13.8679 3.54933 14.5 5.07545 14.5 6.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                                <path d="M8.5 8.66675C9.60457 8.66675 10.5 7.77132 10.5 6.66675C10.5 5.56218 9.60457 4.66675 8.5 4.66675C7.39543 4.66675 6.5 5.56218 6.5 6.66675C6.5 7.77132 7.39543 8.66675 8.5 8.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                            </svg>
+                                            <i class="icon-location"></i>
                                             Memphis, Tennessee
                                         </p>
                                         <div class="date-shape">
@@ -967,10 +955,7 @@
                                             <a href="">Annette Black</a>
                                         </h3>
                                         <p class="card-info d-flex align-items-center justify-content-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" viewBox="0 0 17 16" fill="none">
-                                                <path d="M14.5 6.66675C14.5 11.3334 8.5 15.3334 8.5 15.3334C8.5 15.3334 2.5 11.3334 2.5 6.66675C2.5 5.07545 3.13214 3.54933 4.25736 2.42411C5.38258 1.29889 6.9087 0.666748 8.5 0.666748C10.0913 0.666748 11.6174 1.29889 12.7426 2.42411C13.8679 3.54933 14.5 5.07545 14.5 6.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                                <path d="M8.5 8.66675C9.60457 8.66675 10.5 7.77132 10.5 6.66675C10.5 5.56218 9.60457 4.66675 8.5 4.66675C7.39543 4.66675 6.5 5.56218 6.5 6.66675C6.5 7.77132 7.39543 8.66675 8.5 8.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                            </svg>
+                                            <i class="icon-location"></i>
                                             Memphis, Tennessee
                                         </p>
                                         <div class="date-shape">
@@ -997,10 +982,7 @@
                                             <a href="">Annette Black</a>
                                         </h3>
                                         <p class="card-info d-flex align-items-center justify-content-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" viewBox="0 0 17 16" fill="none">
-                                                <path d="M14.5 6.66675C14.5 11.3334 8.5 15.3334 8.5 15.3334C8.5 15.3334 2.5 11.3334 2.5 6.66675C2.5 5.07545 3.13214 3.54933 4.25736 2.42411C5.38258 1.29889 6.9087 0.666748 8.5 0.666748C10.0913 0.666748 11.6174 1.29889 12.7426 2.42411C13.8679 3.54933 14.5 5.07545 14.5 6.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                                <path d="M8.5 8.66675C9.60457 8.66675 10.5 7.77132 10.5 6.66675C10.5 5.56218 9.60457 4.66675 8.5 4.66675C7.39543 4.66675 6.5 5.56218 6.5 6.66675C6.5 7.77132 7.39543 8.66675 8.5 8.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                            </svg>
+                                            <i class="icon-location"></i>
                                             Memphis, Tennessee
                                         </p>
                                         <div class="date-shape">
@@ -1027,10 +1009,7 @@
                                             <a href="">Annette Black</a>
                                         </h3>
                                         <p class="card-info d-flex align-items-center justify-content-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" viewBox="0 0 17 16" fill="none">
-                                                <path d="M14.5 6.66675C14.5 11.3334 8.5 15.3334 8.5 15.3334C8.5 15.3334 2.5 11.3334 2.5 6.66675C2.5 5.07545 3.13214 3.54933 4.25736 2.42411C5.38258 1.29889 6.9087 0.666748 8.5 0.666748C10.0913 0.666748 11.6174 1.29889 12.7426 2.42411C13.8679 3.54933 14.5 5.07545 14.5 6.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                                <path d="M8.5 8.66675C9.60457 8.66675 10.5 7.77132 10.5 6.66675C10.5 5.56218 9.60457 4.66675 8.5 4.66675C7.39543 4.66675 6.5 5.56218 6.5 6.66675C6.5 7.77132 7.39543 8.66675 8.5 8.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                            </svg>
+                                            <i class="icon-location"></i>
                                             Memphis, Tennessee
                                         </p>
                                         <div class="date-shape">
@@ -1057,10 +1036,7 @@
                                             <a href="">Annette Black</a>
                                         </h3>
                                         <p class="card-info d-flex align-items-center justify-content-center">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" viewBox="0 0 17 16" fill="none">
-                                                <path d="M14.5 6.66675C14.5 11.3334 8.5 15.3334 8.5 15.3334C8.5 15.3334 2.5 11.3334 2.5 6.66675C2.5 5.07545 3.13214 3.54933 4.25736 2.42411C5.38258 1.29889 6.9087 0.666748 8.5 0.666748C10.0913 0.666748 11.6174 1.29889 12.7426 2.42411C13.8679 3.54933 14.5 5.07545 14.5 6.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                                <path d="M8.5 8.66675C9.60457 8.66675 10.5 7.77132 10.5 6.66675C10.5 5.56218 9.60457 4.66675 8.5 4.66675C7.39543 4.66675 6.5 5.56218 6.5 6.66675C6.5 7.77132 7.39543 8.66675 8.5 8.66675Z" stroke="#F4A100" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
-                                            </svg>
+                                            <i class="icon-location"></i>
                                             Memphis, Tennessee
                                         </p>
                                         <div class="date-shape">
@@ -1428,13 +1404,6 @@
                 </section>
                 <!-- end FAQ section -->
 
-                <span class="draw-arrow">
-                    <svg width="126" height="54" viewBox="0 0 126 54" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M4.5 47.5C4.5 47.5 9.9 20.1 34.1 14.3C58.3 8.49996 62.3 26.3 64.3 34C66.3 41.7 57.2 46.2 53.4 41.4C49.6 36.6 46.7 22.1 63.6 10.1C80.5 -1.90004 108.6 -4.80005 124.1 38.6" stroke="black" stroke-width="3" stroke-miterlimit="10" class="line" stroke-linecap="round"/>
-                        <path d="M1.5 26.1001L3.1 51.8001L18.8 37.0001" stroke="black" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" class="line tail-1" stroke-linejoin="round"/>
-                    </svg>
-                </span>
-
                 <!-- Start App Download Section-->
                 <section class="app-download-section app-download-section--style-2 overflow-visible">
                     <div class="container">
@@ -1637,9 +1606,7 @@
                             <div class="col-md-4 col-lg-4 col-xl-4 item">
                                 <div class="contact-info-box contact-info-box--style-1 d-flex align-items-center gap-3 mb-4 mb-md-0">
                                     <div class="icon d-flex justify-content-center align-items-center circle-radius">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="31" viewBox="0 0 30 31" fill="#8ABABD">
-                                            <path d="M24.9375 26.75C22.25 26.75 19.6304 26.1508 17.0788 24.9525C14.5262 23.755 12.2658 22.1717 10.2975 20.2025C8.32833 18.2342 6.745 15.9738 5.5475 13.4212C4.34917 10.8696 3.75 8.25 3.75 5.5625C3.75 5.1875 3.875 4.875 4.125 4.625C4.375 4.375 4.6875 4.25 5.0625 4.25H10.125C10.4167 4.25 10.6771 4.34375 10.9063 4.53125C11.1354 4.71875 11.2708 4.95833 11.3125 5.25L12.125 9.625C12.1667 9.91667 12.1617 10.1821 12.11 10.4212C12.0575 10.6612 11.9375 10.875 11.75 11.0625L8.75 14.125C9.625 15.625 10.7188 17.0312 12.0312 18.3438C13.3438 19.6562 14.7917 20.7917 16.375 21.75L19.3125 18.8125C19.5 18.625 19.745 18.4842 20.0475 18.39C20.3492 18.2967 20.6458 18.2708 20.9375 18.3125L25.25 19.1875C25.5417 19.25 25.7812 19.3904 25.9688 19.6087C26.1562 19.8279 26.25 20.0833 26.25 20.375V25.4375C26.25 25.8125 26.125 26.125 25.875 26.375C25.625 26.625 25.3125 26.75 24.9375 26.75Z" fill=""/>
-                                        </svg>
+                                        <i class="icon-phone"></i>
                                     </div>
                                     <div class="content">
                                         <p class="para-text info-text">Get Free Quote</p>
@@ -1653,9 +1620,7 @@
                             <div class="col-md-4 col-lg-4 col-xl-4 item">
                                 <div class="contact-info-box contact-info-box--style-1 d-flex align-items-center gap-3 mb-4 mb-md-0">
                                     <div class="icon d-flex justify-content-center align-items-center circle-radius">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" viewBox="0 0 29 29" fill="#8ABABD">
-                                            <path d="M26.1663 7.50033C26.1663 6.21699 25.1163 5.16699 23.833 5.16699H5.16634C3.88301 5.16699 2.83301 6.21699 2.83301 7.50033V21.5003C2.83301 22.7837 3.88301 23.8337 5.16634 23.8337H23.833C25.1163 23.8337 26.1663 22.7837 26.1663 21.5003V7.50033ZM23.833 7.50033L14.4997 13.3337L5.16634 7.50033H23.833ZM23.833 21.5003H5.16634V9.83366L14.4997 15.667L23.833 9.83366V21.5003Z" fill=""/>
-                                        </svg>
+                                        <i class="icon-email"></i>
                                     </div>
                                     <div class="content">
                                         <p class="para-text info-text">Get Free Quote</p>
@@ -1669,9 +1634,7 @@
                             <div class="col-md-4 col-lg-4 col-xl-4 item">
                                 <div class="contact-info-box contact-info-box--style-1 d-flex align-items-center gap-3 mb-4 mb-md-0">
                                     <div class="icon d-flex justify-content-center align-items-center circle-radius">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="31" viewBox="0 0 30 31" fill="#8ABABD">
-                                            <path d="M15 15.5C15.6875 15.5 16.2762 15.255 16.7663 14.765C17.2554 14.2758 17.5 13.6875 17.5 13C17.5 12.3125 17.2554 11.7238 16.7663 11.2337C16.2762 10.7446 15.6875 10.5 15 10.5C14.3125 10.5 13.7242 10.7446 13.235 11.2337C12.745 11.7238 12.5 12.3125 12.5 13C12.5 13.6875 12.745 14.2758 13.235 14.765C13.7242 15.255 14.3125 15.5 15 15.5ZM15 24.6875C17.5417 22.3542 19.4271 20.2342 20.6562 18.3275C21.8854 16.4217 22.5 14.7292 22.5 13.25C22.5 10.9792 21.7758 9.11958 20.3275 7.67125C18.88 6.22375 17.1042 5.5 15 5.5C12.8958 5.5 11.1196 6.22375 9.67125 7.67125C8.22375 9.11958 7.5 10.9792 7.5 13.25C7.5 14.7292 8.11458 16.4217 9.34375 18.3275C10.5729 20.2342 12.4583 22.3542 15 24.6875ZM15 28C11.6458 25.1458 9.14083 22.4946 7.485 20.0462C5.82833 17.5988 5 15.3333 5 13.25C5 10.125 6.00542 7.63542 8.01625 5.78125C10.0263 3.92708 12.3542 3 15 3C17.6458 3 19.9738 3.92708 21.9837 5.78125C23.9946 7.63542 25 10.125 25 13.25C25 15.3333 24.1721 17.5988 22.5163 20.0462C20.8596 22.4946 18.3542 25.1458 15 28Z" fill=""/>
-                                          </svg>
+                                        <i class="icon-icon-location-2"></i>
                                     </div>
                                     <div class="content">
                                         <p class="para-text info-text">Get Free Quote</p>
